--- a/webfront/package.json
+++ b/webfront/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^1.0.2",
     "@tsconfig/svelte": "^3.0.0",
+    "@types/aes-js": "^3.1.1",
     "svelte": "^3.49.0",
     "svelte-check": "^2.8.1",
     "svelte-preprocess": "^4.10.7",
@@ -20,6 +21,7 @@
     "vite": "^3.1.0"
   },
   "dependencies": {
+    "aes-js": "^3.1.2",
     "mvp.css": "^1.12.0"
   }
 }
