--- a/webfront/package.json
+++ b/webfront/package.json
@@ -22,6 +22,8 @@
   },
   "dependencies": {
     "aes-js": "^3.1.2",
-    "mvp.css": "^1.12.0"
+    "buffer": "^6.0.3",
+    "mvp.css": "^1.12.0",
+    "scrypt-js": "^3.0.1"
   }
 }
